[package]
name = "md-toc"
version = "0.1.0"
authors = ["Richard Jones <richard.jones@reece.com.au>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "md-toc"
path = "src/md-toc.rs"

[dependencies]
regex = "1"
seed = "^0.4.0"
wasm-bindgen = "^0.2.45"
web-sys = "^0.3.19"

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
